Fix graph dark mode

--- a/source/overlay/outline/outlineDark.css
+++ b/source/overlay/outline/outlineDark.css
@@ -34,11 +34,11 @@ svg.message-icon {
     color: var(--lindy-dark-theme-text-color) !important;
 }
 
-.zoom-icon {
-    color: #d6d3d1; /* text-stone-300 */
+.graph-icon {
+    color: #d6d3d1 !important; /* text-stone-300 */
     background-color: #44403c !important; /* bg-stone-700 */
 }
-.links-message {
+.graph-caption {
     color: #d6d3d1 !important; /* text-stone-300 */
 }
 .star-full {
